--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages VL.</p>
+  
+<a href="./map_finale.html">link text</a>
+
 </body>
 </html>
