--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages VL.</p>
-<p>open map</p> 
+<h1>Title paper </h1>
+<p>The following links give a preliminary version of the future tool that is currently under developpment :</p>
 <a href="./map_finale.html">click to open map</a>
+<a href="./trace_animation_bokeh.html">click to open inteface</a>  
 
 </body>
 </html>
