--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <body>
 <h1>Title paper </h1>
 <p>The following links give a preliminary version of the future tool that is currently under developpment :</p>
-<a href="./map_finale.html">click to open map</a>
-<a href="./trace_animation_bokeh.html">click to open inteface</a>  
+  <ul>
+  <li><a href="./map_finale.html">click to open map</a></li>
+  <li><a href="./trace_animation_bokeh.html">click to open inteface</a>  </li>
+</ul>
+
 
 </body>
 </html>
